--- a/task-4/css/style.css
+++ b/task-4/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ffffff;
+  background-color: #ececec;
   margin: 0 auto;
 }
 #navbar {
@@ -8,11 +8,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #ececec;
 }
 #logo-container {
   width: 300px;
-  float: left;
+  flex: left;
   display: flex;
   justify-content: flex-start;
   padding: 15px;
@@ -31,10 +31,10 @@ body {
 }
 #profile-container > img {
   height: 60px;
-  border-radius: 50%;
+  margin-right: 15px;
 }
 .main {
-  height: calc(100vh-81px);
+  height: calc(100vh - 80px);
   position: relative;
   overflow: hidden;
 }
@@ -46,7 +46,7 @@ body {
 }
 #container > h2 {
   color: #555;
-  margin: 0;
+  margin: 0 0 15px 0;
   text-decoration: underline;
 }
 #container {
@@ -54,71 +54,72 @@ body {
   float: left;
   width: calc(100vw - 180px);
 }
-.green-pg {
-  background-color: #067c4e;
+.green-bg {
+  background-color: #0ace82;
 }
-.purple-pg {
-  background-color: #74598e;
+.purple-bg {
+  background-color: #a359f5;
 }
-.red-pg {
-  background-color: #922f12;
+.red-bg {
+  background-color: #f34e1e;
 }
-.cyan-pg {
-  background-color: #107198;
+.cyan-bg {
+  background-color: #1abcfd;
+}
+#tile-container,
+#circle-container {
+  display: flex;
 }
 #tile-container {
-  display: flex;
+  margin-bottom: 15px;
 }
-.tile {
-  height: 200px;
-  width: calc(100% / 4);
-  display: flex;
-  justify-content: center;
+.title {
   height: 200px;
 }
-.tile h2,
-.tile h3 {
+.title h2,
+.title h3 {
   color: white;
 }
-.tile,
+.title,
 .circle,
 .chart {
   width: calc((100%) / 4);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items:center;
+  align-items: center;
 }
 .circle,
-.chasrt {
-  height: calc((100vw-180px) / 4);
+.chart {
+  height: calc((100vw - 180px) / 4);
 }
 .circle {
   border-radius: 50%;
 }
-#tile-container > div {
-  margin: right 15px;
-  height: calc(100vm 180px) / 4);
-}
-.circle {
-  border-radius: 50px;
-}
 #tile-container > div,
 #circle-container > div {
-  margin-right: 15px;
+  margin: right 15px;
 }
 #tile-container > div:last-child,
 #circle-container > div:last-child {
-  margin: right 0;
-  align-items:center;
+  margin-right: 0;
 }
-.inner-one h2, .inner-four h2 {
+.inner-one {
+  width: 70%;
+  height: 70%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.inner-one h2,
+.inner-four h2 {
   color: #fff;
 }
 .inner-two {
-  width: 70px;
-  height: 70px;
-  border-radius: 50px;
+  width: 90%;
+  height: 90%;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -134,34 +135,71 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ff7262;
+  background-color: #f34e1e;
 }
 .inner-four {
-  width: 70%;
-  height: 70%;
+  width: 40%;
+  height: 40%;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .bar {
-  height: 100%;
-  width: 15px;
+  width: 10px;
   position: absolute;
+  overflow: hidden;
 }
 .chart {
   position: relative;
 }
+.chart div {
+  bottom: 0;
+}
 .one {
   left: 0;
+  height: calc(100% - 30px);
 }
 .two {
   left: 25px;
+  height: calc(100% - 10px);
 }
 .three {
-  left: 50px;
+  left: 55px;
+  height: calc(100% - 70px);
 }
 .four {
-  left: 75px;
+  left: 80px;
+  height: calc(100% - 100px);
 }
-
+.five {
+  left: 105px;
+  height: calc(100% - 20px);
+}
+.six {
+  left: 130px;
+  height: calc(100% - 50px);
+}
+.line {
+  width: 100%;
+  height: 10px;
+  background-color: #625c5c;
+  position: absolute;
+}
+#sidebar nav {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 15px 30px 30px 30px;
+}
+#sidebar nav a {
+  color: white;
+  padding: 5px;
+}
+#sidebar nav a:first-child {
+  padding-top: 0;
+}
+#sidebar nav a.active {
+  color: #0ace82;
+  text-decoration: none;
+}
