--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -57,3 +57,26 @@ body {
   border: 2px solid #2ca122;
   height: 100%;
 }
+@media only screen and (max-width: 650px) {
+  #menu-cantainer {
+    display: none;
+  }
+  .boxes {
+    width: 100%;
+    margin-bottom: 15px;
+  } 
+}
+@media only screen and (max-width:900px)  and (main-width: 651px) {
+  .first {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  .second,
+  third {
+    width: calc((100vw - 75px) / 2);
+  }
+  .third {
+    margin-right: 0;
+  }
+  
+}
